<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="Image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteImage"
        android:contentDescription="Delete Button"
        android:focusable="true"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:clickable="true"
        app:srcCompat="@drawable/delete_button"
        tools:ignore="RtlHardcoded" />

</FrameLayout>