<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title (Users) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Event"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/admin_search_events"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/search"
            android:iconifiedByDefault="false"
            android:queryHint="Search for an event" />

        <ListView
            android:id="@+id/adminEventListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <!-- ListView for the list of profiles-->

</androidx.constraintlayout.widget.ConstraintLayout>
